fix: repair small details

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ import Fonemas from "../components/landing/Fonemas";
     >
       <div
         class="text-base text-center
-        col-span-10 col-start-2 col-end-11
+        col-span-10 col-start-2
         sm:text-3xl
         sm:col-span-12 sm:col-start-2 sm:w-[90%]"
       >
