--- a/src/pages/fonema/v-b.astro
+++ b/src/pages/fonema/v-b.astro
@@ -48,7 +48,7 @@ export async function getStaticPaths() {
         </p>
       </div>
 
-      <div class="max-w-2xl mx-auto">
+      <div class="max-w-[90%] sm:max-w-[50%] mx-auto">
         <p class="text-xl sm:text-3xl text-center -mb-4 sm:mb-4">
           Pensemos <span class="text-bold">por ejemplo</span> en la pronunciación
           de:
